# apiwrappers

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  README.rst  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: deploy.yml  lint-and-test.yml  lint.yml  test.yml
docs/: api.rst  auth.rst  building-an-api-client.rst  conf.py  drivers.rst  experimental-features.rst  index.rst  middleware.rst  requirements.txt
docs/_templates/: badges.html
example/: README.md  client.py  exceptions.py  middleware.py  models.py
src/apiwrappers/: __init__.py  apiwrappers.py  auth.py  compat.py  entities.py  exceptions.py  factories.py  fetch.py  middleware.py  protocols.py  shortcuts.py  structures.py  typedefs.py  utils.py  xfeatures.py
src/apiwrappers/drivers/: aiohttp.py  requests.py
src/apiwrappers/middleware/: __init__.py  auth.py  base.py  chain.py
tests/: factories.py  test_apiwrappers.py  test_auth.py  test_entities.py  test_factories.py  test_fetch.py  test_middleware.py  test_protocols.py  test_shortcuts.py  test_structures.py  test_utils.py  test_xfeatures.py
tests/test_drivers/: conftest.py  httpbin_client.py  httpbin_client.pyi  middleware.py  test_aiohttp.py  test_requests.py  wrappers.py  wrappers.pyi
tests/test_drivers/certs/: ca-bundle.crt  client.crt  client.key  client.pem
tests/test_middleware/: test_base.py  test_chain.py
