[tool.poetry]
name = "apiwrappers"
version = "0.1.0-beta.2"
description = "apiwrappers is a library for building API clients that work both with regular and async code"
keywords = ["api", "wrapper", "http", "client"]
readme = "README.rst"
authors = ["Aleksei Maslakov <lesha.maslakov@gmail.com>"]
documentation = "https://apiwrappers.readthedocs.io/"
license = "MIT"
packages = [
    { include = "apiwrappers", from = "src" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {version = "^3.6.2", optional = true}
requests = {version = "^2.22.0", optional = true}
typing-extensions = {version = "^3.7.4", python = "~3.7"}

[tool.poetry.dev-dependencies]
tox = "^3.14.3"

[tool.poetry.extras]
aiohttp = ["aiohttp"]
requests = ["requests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
